--- a/UnitTests/Schemas/IFC4X1/CMakeLists.txt
+++ b/UnitTests/Schemas/IFC4X1/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-#    Copyright (c) 2018 Technical University of Munich
+#    Copyright (c) 2020 Technical University of Munich
 #    Chair of Computational Modeling and Simulation.
 #
 #    TUM Open Infra Platform is free software; you can redistribute it and/or modify
@@ -15,23 +15,4 @@
 #    along with this program. If not, see <http://www.gnu.org/licenses/>.
 #
 
-#find_package(GTest REQUIRED)
-
-FetchContent_Declare(
-	gtest
-	GIT_REPOSITORY https://github.com/google/googletest.git
-	GIT_TAG release-1.10.0
-)
- 
-FetchContent_GetProperties(gtest)
-if(NOT gtest_POPULATED)
-	FetchContent_Populate(gtest)
-	add_subdirectory(${gtest_SOURCE_DIR} ${gtest_BINARY_DIR} EXCLUDE_FROM_ALL)
-endif()
-
-file(GLOB OpenInfraPlatform_UnitTests_Source *.cpp)
-
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Import/IFC2X3)
-add_subdirectory(Schemas)
-
-
+add_subdirectory(Comments)
