Continued on comment unit test

--- a/UnitTests/Schemas/IFC4X1/Comments/CMakeLists.txt
+++ b/UnitTests/Schemas/IFC4X1/Comments/CMakeLists.txt
@@ -15,4 +15,6 @@
 #    along with this program. If not, see <http://www.gnu.org/licenses/>.
 #
 
+include(CreateUnitTests)
+
 CreateIfcFileUnitTestForSchema(Comments IFC4X1)
