--- a/UnitTests/CMakeLists.txt
+++ b/UnitTests/CMakeLists.txt
@@ -27,6 +27,10 @@ FetchContent_GetProperties(dep_gtest)
 if(NOT dep_gtest_POPULATED)
 	FetchContent_Populate(dep_gtest)
 	add_subdirectory(${dep_gtest_SOURCE_DIR} ${dep_gtest_BINARY_DIR} EXCLUDE_FROM_ALL)
+
+	set_target_properties(gtest PROPERTIES FOLDER "ThirdParty/googletest")
+	set_target_properties(gtest_main PROPERTIES FOLDER "ThirdParty/googletest")
+	set_target_properties(gmock PROPERTIES FOLDER "ThirdParty/googletest")
 endif()
 
 
