Include only the src files of generated IFC stuff.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -321,7 +321,7 @@ set(DOXYGEN_INPUT ${CMAKE_CURRENT_SOURCE_DIR})
 
 # add IFC generated files to doxygen input directory
 foreach(format ${IFC_FORMATS})	
-	set(DOXYGEN_INPUT ${DOXYGEN_INPUT} "${CMAKE_BINARY_DIR}/EarlyBinding/${format}")
+	set(DOXYGEN_INPUT ${DOXYGEN_INPUT} "${CMAKE_BINARY_DIR}/EarlyBinding/${format}/src")
 endforeach()
 
 include(ConfigureDoxygen OPTIONAL)	# Refer to ${CMAKE_CURRENT_SOURCE_DIR}/cmake/ConfigureDoxygen.cmake 
