--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -301,6 +301,9 @@ endforeach()
 # DOXYGEN. 
 #------------------------------------------------------------------------------
 Option(DOXYGEN_GENERATE_DOCUMENTATION ON)
+Option(DOXYGEN_OPTIONAL_COMMENTED_ONLY ON)
+Option(DOXYGEN_OPTIONAL_INCLUDE_GENERATED ON)
+Option(DOXYGEN_OPTIONAL_INCLUDE_INTERNAL ON)
 
 if(DOXYGEN_GENERATE_DOCUMENTATION)
 
@@ -316,6 +319,7 @@ find_package(Doxygen
 	REQUIRED dot
 )
 
+if(DOXYGEN_OPTIONAL_INCLUDE_GENERATED)
 # add source code to doxygen input
 set(DOXYGEN_INPUT ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -325,6 +329,7 @@ foreach(format ${IFC_FORMATS})
 		set(DOXYGEN_INPUT ${DOXYGEN_INPUT} "${CMAKE_BINARY_DIR}/EarlyBinding/${format}/src")
 	endif()
 endforeach()
+endif(DOXYGEN_OPTIONAL_INCLUDE_GENERATED)
 
 include(ConfigureDoxygen OPTIONAL)	# Refer to ${CMAKE_CURRENT_SOURCE_DIR}/cmake/ConfigureDoxygen.cmake 
 set_target_properties(OpenInfraPlatform.GenerateDocumentation 			PROPERTIES FOLDER "OpenInfraPlatform/Commands")
