Moved IfcGeometryModelRenderer to own library

--- a/UnitTests/CMakeLists.txt
+++ b/UnitTests/CMakeLists.txt
@@ -38,5 +38,6 @@ file(GLOB OpenInfraPlatform_UnitTests_Source *.cpp)
 
 add_subdirectory(Generator)
 add_subdirectory(Schemas)
+add_subdirectory(Utilities)
 
 
