--- a/UnitTests/Schemas/IFC4X1/CMakeLists.txt
+++ b/UnitTests/Schemas/IFC4X1/CMakeLists.txt
@@ -16,3 +16,16 @@
 #
 
 add_subdirectory(Comments)
+
+
+include(CreateUnitTests)
+
+# get all subdirectories (that is, unit tests)
+SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_LIST_DIR})
+
+# add to the solution
+FOREACH(subdir ${SUBDIRS})
+  ADD_SUBDIRECTORY(${subdir})
+ENDFOREACH()
+
+   
