Moved the generated types projects to the unit test folders.

--- a/EarlyBinding/CMakeLists.txt
+++ b/EarlyBinding/CMakeLists.txt
@@ -34,6 +34,7 @@ endforeach()
 macro(add_unit_test_generated schema)
     if(EXISTS ${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema})
         add_subdirectory(${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema} ${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema})
+        set_target_properties(OpenInfraPlatform.${schema}.Types PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
         set_target_properties(OpenInfraPlatform.${schema} PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
     endif()
 endmacro()
