Corrected wall-standard-case CMakeLists.txt

--- a/UnitTests/Schemas/IFC4X1/E8/wall-standard-case/CMakeLists.txt
+++ b/UnitTests/Schemas/IFC4X1/E8/wall-standard-case/CMakeLists.txt
@@ -17,4 +17,4 @@
 
 include(CreateUnitTests)
 
-CreateIfcFileUnitTestForSchema(brep-model IFC4X1)
+CreateIfcFileUnitTestForSchema(wall-standard-case IFC4X1)
