Revert "Revert "Split the generated types into a separated library.""
This reverts commit 266f1b128c47e2bc5487f3132213b78b9b617b4f.

--- a/EarlyBinding/CMakeLists.txt
+++ b/EarlyBinding/CMakeLists.txt
@@ -23,7 +23,8 @@ foreach(format ${IFC_FORMATS})
 	message(STATUS "Format ${format} found.")
 	if(EXISTS ${CMAKE_BINARY_DIR}/EarlyBinding/${format})
 		add_subdirectory(${CMAKE_BINARY_DIR}/EarlyBinding/${format} ${CMAKE_BINARY_DIR}/EarlyBinding/${format})
-		set_target_properties(OpenInfraPlatform.${format} PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding")
+        set_target_properties(OpenInfraPlatform.${format}.Types PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
+		set_target_properties(OpenInfraPlatform.${format} PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
 		
 	elseif()
 		message(WARNING "Files for format ${format} not found.")
@@ -33,6 +34,7 @@ endforeach()
 macro(add_unit_test_generated schema)
     if(EXISTS ${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema})
         add_subdirectory(${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema} ${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema})
+        set_target_properties(OpenInfraPlatform.${schema}.Types PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
         set_target_properties(OpenInfraPlatform.${schema} PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
     endif()
 endmacro()
